client/src/scss/pages/MainPage/_configure.scss
.configure-container {
  $configured-source-panel-width: 360px;
  .configured-sources {
    &-container {
      background-color: $background-color;
      border-right: 2px solid $primary-color-light;
      box-sizing: border-box;
      padding-bottom: 80px;
      width: $configured-source-panel-width;
      height: calc(100vh - #{$main-header-height});
      position: fixed;
      display: flex;
      flex-direction: column;

      .input-box {
        flex-basis: 40px;
      }

      li.source-name {
        list-style: none;
        font-size: 14px;
        font-weight: 100;
        padding: 7px 0;
        color: $primary-color-light;
      }

      .list-sources-block {
        overflow-y: auto;
      }
    }
  }

  .configure-sources {
    margin-left: $configured-source-panel-width;
  }

  .input-group {
    $border-size: 2px;

    width: 60%;
    margin-left: 20%;
    margin-right: 20%;
    border-bottom: $border-size solid $primary-color;
    display: table;
    position: relative;
    border-collapse: separate;
    padding: 0 10px 0 6px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;

    &:before,
    &:after {
      content: '';
      display: inline-table;
      box-sizing: border-box;
      width: 1px;
      height: 10px;
      border-right: $border-size solid $primary-color;
      bottom: -2px;
      margin-left: -8px;
      position: absolute;
    }

    &:after {
      margin-left: 10px;
    }

    &__addon {
      display: table-cell;
      vertical-align: middle;
      width: 1%;
      position: relative;
      white-space: nowrap;
      font-size: 0;
      box-sizing: border-box;
      cursor: pointer;

      img {
        position: relative;
        width: 20px;
      }
    }

    input.search-sources {
      display: table-cell;
      position: relative;
      float: left;
      width: 100%;
      border: 0;
      color: $primary-color;
      box-sizing: border-box;
      line-height: 24px;
      font-weight: 700;

      &::-webkit-input-placeholder {
        color: $primary-color-light;
      }

      &:-moz-placeholder,
      &::-moz-placeholder {
        color: $primary-color;
        opacity: 1;
      }
    }
  }

  .sources-suggestions {
    background-color: $background-color;
    padding: 20px;
    margin-top: 50px;

    .fb-sources-tab {
      display: inline-block;
      &__item {
        font-weight: 700;
        color: $primary-color;
        padding: 10px 20px;
        opacity: .5;
        cursor: pointer;

        &.active,
        &:hover {
          opacity: 1;
        }
      }
    }

    .add-all {
      float: right;
      font-weight: 700;
      text-transform: uppercase;
      font-size: 15px;
      color: $primary-color;
      padding-top: 0;

      img {
        width: 30px;
        vertical-align: middle;
        padding-right: 5px;
      }
    }
  }

  .source-results {
    clear: both;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;

    .source {
      background: $dark-background-color;
      padding: 10px;
      margin: .5%;
      width: 31.433333%;
      display: flex;
      -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
      box-sizing: border-box;
      align-items: center;

      @media (min-width: 1400px) {
        width: 24%;
        margin: .5%;
      }

      @media (max-width: 996px) {
        width: 49%;
        margin: .5%;
      }

      &.added {
        background-color: $primary-color;

        .source__title {
          color: #fff;
        }

        .source__url {
          color: #fff;
        }
      }

      &__icon {
        img {
          -webkit-border-radius: 100%;
          -moz-border-radius: 100%;
          border-radius: 100%;
          width: 40px;
          height: 40px;
        }
      }

      &__details {
        flex-grow: 2;
        padding: 0 10px;
      }

      &__title {
        color: $primary-color;
        word-wrap: break-word;
        word-break: break-word;
      }

      &__url {
        color: $primary-color;
        opacity: .54;
        font-size: 12px;
        display: inline-table;
        word-wrap: break-word;
        word-break: break-all;
      }

      &__action-icon {
        img {
          width: 30px;
          cursor: pointer;
        }
      }
    }
  }
}

